# prexcore-payment-processor

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
postman/: prexcore-payment-processor.postman_collection.json
src/: lib.rs  main.rs
src/config/: app_config.rs
src/errors/: app_error.rs
src/handlers/: balance_handler.rs  client_handler.rs  mod.rs  transaction_handler.rs
src/models/: api.rs  domain.rs
src/processors/: event.rs  event_dispatcher.rs  event_handler.rs  mod.rs  transaction_processor.rs
src/routes/: balance.rs  client.rs  mod.rs  transaction.rs
src/services/: balance_service.rs  client_service.rs  mod.rs  transaction_service.rs
src/state/: app_state.rs  in_memory_store.rs  mod.rs
src/storage/: file_storage.rs
tests/: endpoint_tests.rs  mod.rs
