[package]
name = "prexcore-payment-processor"
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"

[dependencies]
actix-web = "4"
tokio = { version = "1.52.1", features = ["full"] }

dotenvy = "0.15"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"

async-trait = "0.1"

rust_decimal = { version = "1.41.0", features = ["serde-with-str"] }

uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

thiserror = "1"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3"